# linkedin-helper

./: .gitignore  requirements.txt  vercel.json
api/: index.py
backend/: .env.example  pyproject.toml
backend/app/: config.py  dependencies.py  main.py
backend/app/cache/: database.py
backend/app/models/: evaluation.py  profile.py  search.py
backend/app/providers/: base.py  registry.py  serp.py
backend/app/routers/: search.py
backend/app/services/: profile_evaluator.py  query_decomposer.py  search_orchestrator.py
frontend/: index.html
frontend/static/css/: style.css
frontend/static/js/: app.js
public/: index.html
public/static/css/: style.css
public/static/js/: app.js
